# AiDA

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
.github/scripts/: build_helper.py  setup_build_env.py
.github/workflows/: build-and-release.yml
libs/: CMakeLists.txt
libs/cpp-httplib/: CMakeLists.txt
libs/nlohmann/: CMakeLists.txt
src/: CMakeLists.txt  ai_client.cpp  ida_utils.cpp  settings.cpp  settings.hpp  ui.cpp
